testdata/baselines/reference/submodule/conformance/expandoOnAlias.errors.txt
test.js(4,5): error TS2339: Property 'config' does not exist on type '{ new (): Vue; prototype: Vue; }'.
test.js(12,8): error TS2339: Property 'y' does not exist on type '{ x: number; }'.
test.js(14,8): error TS2339: Property 'y' does not exist on type '{ x: number; }'.


==== vue.js (0 errors) ====
    export class Vue {}
    export const config = { x: 0 };
    
==== test.js (3 errors) ====
    import { Vue, config } from "./vue";
    
    // Expando declarations aren't allowed on aliases.
    Vue.config = {};
        ~~~~~~
!!! error TS2339: Property 'config' does not exist on type '{ new (): Vue; prototype: Vue; }'.
    new Vue();
    
    // This is not an expando declaration; it's just a plain property assignment.
    config.x = 1;
    
    // This is not an expando declaration; it works because non-strict JS allows
    // loosey goosey assignment on objects.
    config.y = {};
           ~
!!! error TS2339: Property 'y' does not exist on type '{ x: number; }'.
    config.x;
    config.y;
           ~
!!! error TS2339: Property 'y' does not exist on type '{ x: number; }'.
    